# clinfo-lite

./: CMakeLists.txt  LICENSE  README.md  clinfo-lite.c
.github/workflows/: build.yml
cmake/: SetUpOpencl.cmake
